--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -909,7 +909,7 @@
                   </div>
                   <div class="row">
                     <div class="col-12">
-                      <table class="table table-striped">
+                      <table class="table table-striped nl-team-list-table">
                         <thead>
                           <tr>
                             <th>NAME</th>
