--- a/markup/_dist/football_enter_contests.html
+++ b/markup/_dist/football_enter_contests.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Enter a contest</title>
+    <title>Enter a contest - football</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
@@ -126,77 +126,60 @@
                 <button type="button" class="btn btn-team btn-big-radius active field-view-btn">field view</button>
                 <button type="button" class="btn btn-team btn-big-radius list-view-btn">list view</button>
               </div>
-              <div class="nl-team-field">
+              <div class="nl-team-field football">
                 <div class="striker-line"></div>
                 <div class="midfielder-line"></div>
                 <div class="defender-line"></div>
-                <div class="player-main-block">
-                  <div data-position="G" class="nl-player-block nl-G-position"><img src="assets/img/img-goalkeeper.png" alt="goalkeeper">
+                <div class="player-main-block football">
+                  <div data-position="FLEX" class="nl-player-block nl-FLEX-position"><img src="assets/img/football/img-FLEX.png" alt="FLEX">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DL" class="nl-player-block nl-DL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="K" class="nl-player-block nl-K-position"><img src="assets/img/football/img-K.png" alt="K">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DR" class="nl-player-block nl-DR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="LRB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/img-LRB.png" alt="LRB">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DAL" class="nl-player-block nl-DAL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="RRB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/img-RRB.png" alt="RRB">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DAR" class="nl-player-block nl-DAR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/img-QB.png" alt="QB">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="CM" class="nl-player-block nl-CM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="LWR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/img-LWR.png" alt="LWR">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RWM" class="nl-player-block nl-RWM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="RWR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/img-RWR.png" alt="RWR">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="LWM" class="nl-player-block nl-LWM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="TE" class="nl-player-block nl-TE-position"><img src="assets/img/football/img-TE.png" alt="TE">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RS" class="nl-player-block nl-RS-position"><img src="assets/img/img-players.png" alt="goalkeeper">
-                    <div class="nl-player-block--data">
-                      <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
-                    </div>
-                  </div>
-                  <div data-position="LS" class="nl-player-block nl-LS-position"><img src="assets/img/img-players.png" alt="goalkeeper">
-                    <div class="nl-player-block--data">
-                      <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
-                    </div>
-                  </div>
-                  <div data-position="ST" class="nl-player-block nl-ST-position"><img src="assets/img/img-players.png" alt="goalkeeper">
-                    <div class="nl-player-block--data">
-                      <p>gronkowski</p>
-                      <p class="data"><span>12.67</span> <span>$42000</span></p>
-                    </div>
-                  </div>
+                  <div class="nl-player-block nl-team-logo-position"><img src="assets/img/football/team-logo.png" alt="logo"></div>
                 </div>
               </div>
               <div class="nl-team-list nl-my-teams hide">
@@ -204,7 +187,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="nl-team-card table-data-field">
-                        <h3>team NLC2</h3>
+                        <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
                       </div>
                     </div>
                   </div>
@@ -222,67 +205,49 @@
                         <tbody>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">G</td>
+                            <td class="pos">FLEX</td>
                             <td>30</td>
                             <td>$0</td>
                           </tr>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">DL</td>
+                            <td class="pos">K</td>
                             <td>30</td>
                             <td>$0</td>
                           </tr>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">DR</td>
+                            <td class="pos">LRB</td>
                             <td>30</td>
                             <td>$0</td>
                           </tr>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">DAL</td>
+                            <td class="pos">RRB</td>
                             <td>30</td>
                             <td>$0</td>
                           </tr>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">DAR</td>
+                            <td class="pos">QB</td>
                             <td>30</td>
                             <td>$0</td>
                           </tr>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">CM</td>
+                            <td class="pos">LWR</td>
                             <td>30</td>
                             <td>$0</td>
                           </tr>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">RWM</td>
+                            <td class="pos">RWR</td>
                             <td>30</td>
                             <td>$0</td>
                           </tr>
                           <tr>
                             <td>Player name</td>
-                            <td class="pos">LWM</td>
-                            <td>30</td>
-                            <td>$0</td>
-                          </tr>
-                          <tr>
-                            <td>Player name</td>
-                            <td class="pos">RS</td>
-                            <td>30</td>
-                            <td>$0</td>
-                          </tr>
-                          <tr>
-                            <td>Player name</td>
-                            <td class="pos">LS</td>
-                            <td>30</td>
-                            <td>$0</td>
-                          </tr>
-                          <tr>
-                            <td>Player name</td>
-                            <td class="pos">ST</td>
+                            <td class="pos">TE</td>
                             <td>30</td>
                             <td>$0</td>
                           </tr>
