Adjust tables for football contests

--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -89,7 +89,7 @@
     </header>
     <main>
       <section class="nl-section nl-players nl-create-team">
-        <div class="container">
+        <div class="container container-wider">
           <div class="row">
             <div class="col-md-12">
               <h1>CREATE TEAM</h1>
@@ -695,11 +695,11 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>FLEX</td>
+                              <td>G</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
-                              <td>09/17/17</td>
+                              <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
                             </tr>
                             <tr>
@@ -709,11 +709,11 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>K</td>
+                              <td>DL</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
-                              <td>09/17/17</td>
+                              <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
                             </tr>
                             <tr>
@@ -723,11 +723,11 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>LRB</td>
+                              <td>DR</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
-                              <td>09/17/17</td>
+                              <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
                             </tr>
                             <tr>
@@ -737,11 +737,11 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>RRB</td>
+                              <td>DAL</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
-                              <td>09/17/17</td>
+                              <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
                             </tr>
                             <tr>
@@ -751,11 +751,11 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>QB</td>
+                              <td>DAR</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
-                              <td>09/17/17</td>
+                              <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
                             </tr>
                             <tr>
@@ -765,11 +765,11 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>LWR</td>
+                              <td>CM</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
-                              <td>09/17/17</td>
+                              <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
                             </tr>
                             <tr>
@@ -779,11 +779,11 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>RWR</td>
+                              <td>RWM</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
-                              <td>09/17/17</td>
+                              <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
                             </tr>
                             <tr>
@@ -793,11 +793,53 @@
                               <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
                               <td>$21000</td>
                               <td>20</td>
-                              <td>TE</td>
+                              <td>LWM</td>
                               <td>RMA</td>
                               <td>ACT</td>
                               <td>FCB</td>
-                              <td>09/17/17</td>
+                              <td>09/17/17 11:00 PM</td>
+                              <td><a href="#"><span class="info">i</span></a></td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                              </td>
+                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
+                              <td>$21000</td>
+                              <td>20</td>
+                              <td>RS</td>
+                              <td>RMA</td>
+                              <td>ACT</td>
+                              <td>FCB</td>
+                              <td>09/17/17 11:00 PM</td>
+                              <td><a href="#"><span class="info">i</span></a></td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                              </td>
+                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
+                              <td>$21000</td>
+                              <td>20</td>
+                              <td>LS</td>
+                              <td>RMA</td>
+                              <td>ACT</td>
+                              <td>FCB</td>
+                              <td>09/17/17 11:00 PM</td>
+                              <td><a href="#"><span class="info">i</span></a></td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <button class="btn btn-primary btn-sm disabled">Draft</button>
+                              </td>
+                              <td class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"> Cristiano Ronaldo</td>
+                              <td>$21000</td>
+                              <td>20</td>
+                              <td>ST</td>
+                              <td>RMA</td>
+                              <td>ACT</td>
+                              <td>FCB</td>
+                              <td>09/17/17 11:00 PM</td>
                               <td><a href="#"><span class="info">i</span></a></td>
                             </tr>
                           </tbody>
