--- a/markup/_dist/enter_contests.html
+++ b/markup/_dist/enter_contests.html
@@ -89,9 +89,9 @@
     </header>
     <main>
       <section class="nl-section nl-players nl-enter-contests">
-        <div class="container">
+        <div class="container container-narrow">
           <div class="row">
-            <div class="col-lg-5 offset-lg-1">
+            <div class="col-md-12 col-lg-6">
               <div class="heading-search">
                 <h1 class="heading-search__header">Teams</h1>
                 <div class="heading-search__search">
@@ -293,7 +293,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 offset-lg-1">
+            <div class="col-md-12 col-lg-6">
               <div class="nl-contest-info-title">
                 <h1 class="heading-search__header">Contest information</h1>
               </div>
