--- a/markup/_dist/players.html
+++ b/markup/_dist/players.html
@@ -102,10 +102,10 @@
                 <div class="row align-items-center">
                   <div>
                     <ul role="tablist" class="country-selector nav nav-tabs">
-                      <li class="nav-item"><a data-toggle="tab" href="#usa" role="tab" class="country-selector__link"><img src="assets/img/flag/USA.png" alt="USA" class="haat"></a></li>
-                      <li class="nav-item"><a data-toggle="tab" href="#spain" role="tab" class="country-selector__link"><img src="assets/img/flag/Spain.png" alt="Spain" class="haat"></a></li>
-                      <li class="nav-item"><a data-toggle="tab" href="#germany" role="tab" class="country-selector__link"><img src="assets/img/flag/Germany.png" alt="Germany" class="haat"></a></li>
-                      <li class="nav-item"><a data-toggle="tab" href="#france" role="tab" class="country-selector__link"><img src="assets/img/flag/France.png" alt="France" class="haat"></a></li>
+                      <li class="nav-item"><a data-toggle="tab" href="#usa" role="tab" class="country-selector__link"><img src="assets/img/flag/USA.png" alt="USA"></a></li>
+                      <li class="nav-item"><a data-toggle="tab" href="#spain" role="tab" class="country-selector__link"><img src="assets/img/flag/Spain.png" alt="Spain"></a></li>
+                      <li class="nav-item"><a data-toggle="tab" href="#germany" role="tab" class="country-selector__link"><img src="assets/img/flag/Germany.png" alt="Germany"></a></li>
+                      <li class="nav-item"><a data-toggle="tab" href="#france" role="tab" class="country-selector__link"><img src="assets/img/flag/France.png" alt="France"></a></li>
                     </ul>
                   </div>
                 </div>
