--- a/markup/_dist/my_teams_soccer.html
+++ b/markup/_dist/my_teams_soccer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>My teams Page | NLC2</title>
+    <title>My teams Page Soccer | NLC2</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
@@ -90,7 +90,7 @@
       </div>
     </header>
     <main>
-      <section class="nl-section nl-my-teams">
+      <section class="nl-section nl-my-teams soccer">
         <div class="container container-wider">
           <div class="row">
             <div class="col-md-12">
@@ -121,7 +121,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down" class="hidden-xs-down">
+                      <p>Team:<span class="title">team NLC2</span></p>
                     </div>
                   </div>
                 </div>
@@ -230,7 +230,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                      <p>Team:<span class="title">team NLC2</span></p>
                     </div>
                   </div>
                 </div>
@@ -339,7 +339,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                      <p>Team:<span class="title">team NLC2</span></p>
                     </div>
                   </div>
                 </div>
@@ -448,7 +448,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                      <p>Team:<span class="title">team NLC2</span></p>
                     </div>
                   </div>
                 </div>
