--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -98,7 +98,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12"><a href="create_team.html"> 
+            <div class="col-md-12"><a href="create_team_football.html"> 
                 <div class="btn btn-primary btn-lg btn-create-team">Create team</div></a></div>
           </div>
           <div class="row">
@@ -121,7 +121,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down" class="hidden-xs-down">
+                      <p><span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down" class="hidden-xs-down">
                     </div>
                   </div>
                 </div>
@@ -230,7 +230,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                      <p><span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
                     </div>
                   </div>
                 </div>
@@ -339,7 +339,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                      <p><span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
                     </div>
                   </div>
                 </div>
@@ -448,7 +448,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                      <p><span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
                     </div>
                   </div>
                 </div>
