--- a/markup/_dist/my_teams_soccer.html
+++ b/markup/_dist/my_teams_soccer.html
@@ -120,9 +120,7 @@
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
-                    <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p>
-                    </div>
+                    <div class="nl-team-card table-data-field"><span class="title">Team name NLC2</span></div>
                   </div>
                 </div>
                 <div class="row">
@@ -229,9 +227,7 @@
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
-                    <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p>
-                    </div>
+                    <div class="nl-team-card table-data-field"><span class="title">Team name NLC2</span></div>
                   </div>
                 </div>
                 <div class="row">
@@ -338,9 +334,7 @@
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
-                    <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p>
-                    </div>
+                    <div class="nl-team-card table-data-field"><span class="title">Team name NLC2</span></div>
                   </div>
                 </div>
                 <div class="row">
@@ -447,9 +441,7 @@
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
-                    <div class="nl-team-card table-data-field">
-                      <p>Team:<span class="title">team NLC2</span></p>
-                    </div>
+                    <div class="nl-team-card table-data-field"><span class="title">Team name NLC2</span></div>
                   </div>
                 </div>
                 <div class="row">
